plugins {
    id 'io.github.jwharm.flatpak-gradle-generator' version '1.5.0'
    id 'application'
}

repositories {
	gradlePluginPortal()
    mavenCentral()
    maven { url='build/repository' } // used by flatpak-builder
}

dependencies {
    implementation 'io.github.jwharm.javagi:adw:0.11.2'
	implementation 'io.github.jwharm.flatpak-gradle-generator:io.github.jwharm.flatpak-gradle-generator.gradle.plugin:1.5.0'
	implementation 'org.gradle.toolchains.foojay-resolver-convention:org.gradle.toolchains.foojay-resolver-convention.gradle.plugin:0.9.0'
}

// Task to compile gresource files
tasks.register('compileResources') {
    providers.exec {
        workingDir 'src/main/resources'
        commandLine 'glib-compile-resources', 'texty3.gresource.xml'
    }
}

// Task to generate a file with all dependency urls for the offline flatpak build
tasks.flatpakGradleGenerator {
    outputFile.set(file("$rootDir/flatpak/maven-dependencies.json"))
    downloadDirectory.set('build/repository')
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
        vendor = JvmVendorSpec.ADOPTIUM
    }
}

group = 'ca.footeware.java'
version = '1.0.0'

tasks.named('compileJava') {
    dependsOn compileResources
}

tasks.named('installDist') {
    destinationDir = file('/opt/texty3')
}

application {
    mainClass = 'texty3.Main'
    applicationDefaultJvmArgs += "--enable-native-access=ALL-UNNAMED"
}